[package]
name = "node-voxel-worldgen"
version = "1.0.0"
authors = ["mhsjlw <mhsjlw@aol.com>"]
license = "MIT"

[lib]
name = "node_voxel_worldgen"
crate-type = ["dylib"]

[dependencies]
neon = "0.1"
voxel_worldgen = { git = "https://github.com/hansihe/voxel_worldgen.git" }
nalgebra = "0.5.1"
noise = "0.1.5"
rand = "0.3.14"